--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+certifi==2017.7.27.1
+chardet==3.0.4
 Django==1.11.5
+facebook-sdk==2.0.0
+idna==2.6
+PyMySQL==0.7.11
 pytz==2017.2
+requests==2.18.4
+Unidecode==0.4.21
+urllib3==1.22
